adding tasks, deadline 20/7

--- a/session-4/index.html
+++ b/session-4/index.html
@@ -19,7 +19,73 @@
 </head>
 
 <body>
+<div class="blog-post">
+  <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt sunt exercitationem culpa quam sint dolor magni consequatur itaque aliquid, fugit quo corporis laboriosam nulla consequuntur cupiditate rerum et illo aspernatur!</p>
  
+  <img src="./assets/images/port-1.jpg" alt="">
+  <h4>This is a blog post</h4>
+</div> 
+<div class="blog-post">
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt sunt exercitationem culpa quam sint dolor magni consequatur itaque aliquid, fugit quo corporis laboriosam nulla consequuntur cupiditate rerum et illo aspernatur!</p>
+  
+  <img src="./assets/images/port-1.jpg" alt="">
+  <h4>This is a blog post</h4>
+</div> <div class="blog-post">
+  <p>
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt sunt exercitationem culpa quam sint dolor magni consequatur itaque aliquid, fugit quo corporis laboriosam nulla consequuntur cupiditate rerum et illo aspernatur!</p>
+  <img src="./assets/images/port-1.jpg" alt="">
+  <h4>This is a blog post</h4>
+</div> 
+
+
+
+
+
+
+
+
+
+
+<div class="">
+  <form action="">
+  <input class="text">
+</form>
+</div>
+
+
+<hr>
+
+
+
+
+
+<hr>
+
+
+
+
+
+<hr>
+
+
+
+
+
+
+<hr>
+
+
+
+
+
+<hr>
+
+
+
+
+
+
+
 </body>
 
 </html>
