--- a/task3/index.html
+++ b/task3/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <section class="services">
+    <div class="services">
       <div class="service-item">
         <div class="service-icon">
           <i class="fas fa-paint-brush"></i>
@@ -64,6 +64,6 @@
         </div>
         <div class="service-number">04</div>
       </div>
-    </section>
+    </div>
   </body>
 </html>
