--- a/Task7/index.html
+++ b/Task7/index.html
@@ -3,7 +3,111 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Popular Classes</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <section class="popular-classes">
+      <h2>Our Popular Classes</h2>
+      <div class="class-list">
+        <div class="class-item">
+          <img src="class1.jpg" alt="Introduction to Psychology Subject" />
+          <div class="class-info">
+            <div class="class-rating">
+              <i class="fas fa-star"></i><i class="fas fa-star"></i
+              ><i class="fas fa-star"></i><i class="fas fa-star"></i
+              ><i class="fas fa-star"></i>
+              <span>(03 Reviews)</span>
+            </div>
+            <h3>Introduction to Psychology Subject</h3>
+            <div class="class-meta">
+              <span><i class="fas fa-book"></i> 23 Lessons</span>
+              <span><i class="fas fa-user"></i> 45 Students</span>
+            </div>
+            <p>
+              Through a combination of lectures, readings and discussions
+              students.
+            </p>
+            <div class="class-author">
+              <img src="author1.jpg" alt="Eric Wid get" />
+              <span>By Eric Wid get</span>
+            </div>
+            <div class="class-footer">
+              <span class="original-price">$140</span>
+              <span class="discounted-price">$96.00</span>
+              <a href="#" class="more-details"
+                >More Details <i class="fas fa-chevron-right"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+        <div class="class-item">
+          <img src="class2.jpg" alt="Complete Angular Developer in 2023" />
+          <div class="class-info">
+            <div class="class-rating">
+              <i class="fas fa-star"></i><i class="fas fa-star"></i
+              ><i class="fas fa-star"></i><i class="fas fa-star"></i
+              ><i class="fas fa-star"></i>
+              <span>(03 Reviews)</span>
+            </div>
+            <h3>Complete Angular Developer in 2023</h3>
+            <div class="class-meta">
+              <span><i class="fas fa-book"></i> 54 Lessons</span>
+              <span><i class="fas fa-user"></i> 72 Students</span>
+            </div>
+            <p>
+              Through a combination of lectures, readings and discussions
+              students.
+            </p>
+            <div class="class-author">
+              <img src="author2.jpg" alt="Hanson Deck" />
+              <span>By Hanson Deck</span>
+            </div>
+            <div class="class-footer">
+              <span class="original-price">$120</span>
+              <span class="discounted-price">$70.00</span>
+              <a href="#" class="more-details"
+                >More Details <i class="fas fa-chevron-right"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+        <div class="class-item">
+          <img src="class3.jpg" alt="The Science of Well-being for Teens" />
+          <div class="class-info">
+            <div class="class-rating">
+              <i class="fas fa-star"></i><i class="fas fa-star"></i
+              ><i class="fas fa-star"></i><i class="fas fa-star"></i
+              ><i class="fas fa-star"></i>
+              <span>(03 Reviews)</span>
+            </div>
+            <h3>The Science of Well-being for Teens</h3>
+            <div class="class-meta">
+              <span><i class="fas fa-book"></i> 67 Lessons</span>
+              <span><i class="fas fa-user"></i> 24 Students</span>
+            </div>
+            <p>
+              Through a combination of lectures, readings and discussions
+              students.
+            </p>
+            <div class="class-author">
+              <img src="author3.jpg" alt="Max Conversion" />
+              <span>By Max Conversion</span>
+            </div>
+            <div class="class-footer">
+              <span class="original-price">$150</span>
+              <span class="discounted-price">$99.00</span>
+              <a href="#" class="more-details"
+                >More Details <i class="fas fa-chevron-right"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
